--- a/formulario.html
+++ b/formulario.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<div class="container">
+        
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8 col-12">
                 <form id="contactForm" class="needs-validation" novalidate>
@@ -30,10 +35,6 @@
                 </form>
             </div>
         </div>
-    </div>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+    </div>
 </body>
 </html>
