Se añade h2 al login

--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Login</h1>
+    <h2>Subscríbete</h2>
     <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
