--- a/formulario.html
+++ b/formulario.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Formulario</h1>
+    <h1>FORMULARIO</h1>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8 col-12">
